<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/title_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/accent_color"
        android:textSize="22sp"
        android:textStyle="normal"
        tools:text="@string/dialog_error_title" />

    <TextView
        android:id="@+id/msg_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_msg"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_margin="12dp"
        android:fontFamily="@font/poppins_regular"
        android:textAlignment="center"
        android:textColor="@color/accent_color"
        android:textSize="16sp"
        android:textStyle="normal"
        tools:text="@string/disconnect_alert_msg" />

    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/msg_body"
        android:background="@color/light_grey" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_below="@+id/separator"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:id="@+id/cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/btn_cancel"
            android:textColor="@color/accent_color"
            android:textSize="16sp"
            android:textStyle="normal" />

        <View
            android:id="@+id/btns_separator"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp"
            android:background="@color/light_grey" />

        <TextView
            android:id="@+id/confirm_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/btn_confirm"
            android:textColor="@color/accent_color"
            android:textSize="16sp"
            android:textStyle="normal" />
    </LinearLayout>

</RelativeLayout>
