<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipChildren="false"
    android:clipToPadding="false"
    app:cardCornerRadius="12dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/dialog_quantity_title"
            android:textColor="@color/accent_color"
            android:textSize="14sp"
            android:textStyle="normal" />

        <LinearLayout
            android:id="@+id/ly_qte_btns"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title_msg"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/article_qte_remove"
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/ic_product_page_minus" />

            <EditText
                android:id="@+id/qte_article"
                android:layout_width="75dp"
                android:layout_height="41dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:autofillHints="@null"
                android:background="@drawable/qty_input_bg"
                android:digits="1234567890"
                android:fontFamily="@font/poppins_semibold"
                android:hint="@string/qty_input_hint"
                android:inputType="number"
                android:singleLine="true"
                android:textAlignment="center"
                android:textColor="@color/coolGrey"
                android:textSize="24sp"
                tools:text="10" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/article_qte_add"
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/ic_product_page_plus" />

        </LinearLayout>

        <View
            android:id="@+id/separator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/ly_qte_btns"
            android:background="@color/light_grey" />

        <TextView
            android:id="@+id/confirm_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/separator"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_margin="12dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/btn_confirm"
            android:textColor="@color/accent_color"
            android:textSize="16sp"
            android:textStyle="normal" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>
