<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/white"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/save"
        android:animateLayoutChanges="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/content_ultraLightGrey"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingStart="@dimen/spacing_m"
            android:paddingTop="@dimen/spacing_xs"
            android:paddingEnd="@dimen/spacing_m"
            android:paddingBottom="@dimen/spacing_m">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_s"
                android:orientation="horizontal"
                android:visibility="gone"
                android:weightSum="1">

                <TextView
                    style="@style/titleMedium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/search_clients_label"
                    android:textColor="@color/content_dark" />
            </LinearLayout>

        </LinearLayout>

        <androidx.appcompat.widget.SearchView
            android:id="@+id/search_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_btns"
            android:layout_gravity="end"
            android:layout_marginStart="16dp"
            android:layout_marginTop="@dimen/spacing_s"
            android:layout_marginEnd="16dp"
            android:paddingEnd="10dp"
            android:background="@drawable/bg_rounded_softgrey"
            app:queryBackground="@color/transparent"
            android:gravity="center_vertical"
            app:queryHint="@string/hint_search"
            android:minHeight="40dp"
            android:focusable="false"
            android:theme="@style/SearchViewStyle"
            app:iconifiedByDefault="false"
            app:searchIcon="@drawable/ic_search" />


        <LinearLayout
            android:id="@+id/coliesInfoCntr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="@dimen/spacing_s"
            android:layout_marginEnd="16dp"
            android:visibility="gone"
            android:animateLayoutChanges="true"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/totalColis"
                style="@style/titleMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/total_colis"
                android:textColor="@color/content_dark" />
            <TextView
                android:id="@+id/totalPoids"
                style="@style/titleMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/total_poids"
                android:textColor="@color/content_dark" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/spacing_xs"
            android:background="@color/content_lightGrey" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_xs"
            android:layout_marginTop="@dimen/spacing_xs"
            android:layout_marginEnd="@dimen/spacing_xs"
            android:overScrollMode="never"
            tools:listitem="@layout/client_details_view" />
    </LinearLayout>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/loader_progress"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:visibility="gone"
        app:lottie_autoPlay="true"
        app:lottie_fileName="loader.json"
        app:lottie_loop="true" />

    <Button
        android:id="@+id/save"
        style="@style/Widget.Chari.Button.BtnAction.Medium"
        android:layout_marginBottom="@dimen/spacing_xs"
        android:text="valider"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>
